<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/emptyView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible">


    <TextView
        android:id="@+id/noResultsQuery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/titillium_web_regular"
        android:text="@string/no_result_query"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:visibility="invisible" />


    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_flag" />

    <TextView
        android:id="@+id/tvText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/titillium_web_bold"
        android:text="@string/no_result_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_regular"
        android:text="@string/no_result_subtitle"
        android:textAlignment="center"
        android:textColor="@color/gray" />

</LinearLayout>