<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fillViewport="true"
            tools:background="@drawable/bg_gradient_app">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">


        <ImageView
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/todo"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/titillium_web_bold"
                android:textColor="@android:color/white"
                android:text="@string/title_login3"
                android:layout_gravity="center"
                android:lineSpacingMultiplier="0.8"
                android:gravity="center"
                android:textSize="25sp"/>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/type_number_card"
                android:labelFor="@+id/etNumberCard"
                android:textColorHint="@color/white_label_transparent"
                app:boxStrokeColor="@color/black"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNumberCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:inputType="number"
                    android:maxLength="19"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_password"
                android:labelFor="@+id/etPassword"
                android:textColorHint="@color/white_label_transparent"
                app:boxStrokeColor="@color/black"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start"
                    android:maxLength="14"
                    android:textCursorDrawable="@null"
                    android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swRememberNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:theme="@style/SwitchStyle" android:layout_marginEnd="15dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_regular"
                    android:text="@string/remember_data"
                    android:textColor="@android:color/white" />

        </LinearLayout>

        <include layout="@layout/login_bottom" />


    </LinearLayout>


</ScrollView>