<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fillViewport="true"
            tools:background="@drawable/bg_gradient_app">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">


            <ImageView
                    android:layout_width="50dp"
                    android:layout_height="70dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="30dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_bold"
                    android:textColor="@android:color/white"
                    android:text="@string/title_login"
                    android:layout_gravity="center"
                    android:lineSpacingMultiplier="0.8"
                    android:gravity="center"
                    android:textSize="25sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/titillium_web_regular"
                    android:text="@string/title_login2"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:lines="3"
                    android:minLines="3"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:hint="@string/type_tel"
                    android:labelFor="@+id/etNumberPhone"
                    android:textColorHint="@color/white_label_transparent"
                    app:boxStrokeColor="@color/black"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNumberPhone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="start"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="15"
                        android:textCursorDrawable="@null"/>

            </com.google.android.material.textfield.TextInputLayout>


            <include layout="@layout/login_bottom"/>


        </LinearLayout>

        <include layout="@layout/loader_fs"/>

    </RelativeLayout>

</ScrollView>