<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:fillViewport="true"
        android:focusable="true"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="55dp">

            <LinearLayout
                android:id="@+id/printView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivCategory"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_cat_transfer" />

                    <TextView
                        android:id="@+id/tvCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:gravity="center|start"
                        android:textColor="@android:color/black"
                        tools:text="Category" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layerType="software"
                    android:src="@drawable/dash_line" />

                <LinearLayout
                    android:id="@+id/viewItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layerType="software"
                    android:src="@drawable/dash_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/titillium_web_regular"
                        android:text="@string/transaction_value"
                        android:textColor="@color/gray" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tvValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/titillium_web_bold"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        tools:text="R$135,47" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btShare"
                style="@style/ButtonActionWhite2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/ic_share_transaction"
                android:drawableRight="@drawable/ic_share_transaction"
                android:drawablePadding="20dp"
                android:paddingStart="40dp"
                android:paddingTop="5dp"
                android:paddingEnd="40dp"
                android:paddingBottom="5dp"
                android:text="@string/transaction_share"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/loader_fs" />

    <LinearLayout
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_warning" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ops!"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="34sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_not_found"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>

